--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %} 
+{% load rango_template_tags %}
 <html>
     <head lang="en">
         <meta charset="UTF-8">
@@ -16,6 +17,11 @@
             This is body_block's default content.
         {% endblock %} 
         </div>
+        <div>
+            {% block sidebar_block %}
+                {% get_category_list category %}
+            {% endblock %}
+        </div>          
         <hr />
         <div>
             <ul>
