--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -9,6 +9,8 @@
         {% endblock %}
         <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
         <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+        <script src="https://kit.fontawesome.com/9095c6b559.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <title>
             Rango - 
             {% block title_block %}
