--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,5 +1,6 @@
 {% extends 'rango/base.html' %}
-{% load staticfiles %}
+{% load static %}
+{% load rango_template_tags %}
 
 {% block title_block %}
     {% if category %}
@@ -8,8 +9,10 @@
         Unknown Category
     {% endif %}
 {% endblock %}
-
 {% block body_block %}
+    
+    
+    
     {% if category %}
     <h1>{{ category.name }}</h1>
     {% if pages %}
@@ -18,14 +21,15 @@
         <li><a href="{{ page.url }}">{{ page.title }}</a></li>
         {% endfor %}
     </ul>
-    {% else %}
-    <strong>No pages currently in category.</strong>
     {% endif %}
-
     {% if user.is_authenticated %}
-    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+    <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br />
     {% endif %}
     {% else %}
-    The specified category does not exist.
+    {% for c in cat %}
+    <h2><a href="/rango/category/{{ c.slug }}/">{{ c.name }}</a></h2>
+    {% get_page_list c page %}
+    {% endfor %}
     {% endif %}
+</div>
 {% endblock %}
