--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -5,7 +5,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         {% block css_block %}
-            <link rel="stylesheet" href="{% static 'css/index.css' %}">
+            <link rel="stylesheet" href="{% static 'css/base.css' %}">
         {% endblock %}
         <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
         <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
@@ -19,6 +19,49 @@
         </title>
     </head>
     <body>
+        <section id = "title">
+            <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">
+                      Rango
+                    </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'rango:index' %}"><i class="fas fa-home"></i> Home</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex">
+                      <input class="search me-2" type="search" placeholder="Search categories, pages" aria-label="Search">
+                      <button class="btn btn-dark" type="submit">Search</button>
+                    </form>
+                    {% if user.is_authenticated %}
+                        <ul class="navbar-nav me-auto mb-3 mb-lg-0">
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-user-circle"></i> Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'rango:logout' %}"> <i class="fas fa-sign-out-alt"></i></i> Log out</a>
+                            </li>
+                        </ul> 
+                    {% else %}
+                        <ul class="navbar-nav me-auto mb-3 mb-lg-0">
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'rango:login' %}"><i class="fas fa-sign-in-alt"></i> Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'rango:register' %}"><i class="fas fa-user-plus"></i> Sign Up</a>
+                            </li>
+                        </ul> 
+                    {% endif %}
+                  </div>
+                </div>
+              </nav>
+        </section>
+
         <div>
         {% block body_block %}
             This is body_block's default content.
@@ -30,20 +73,15 @@
             {% endblock %}
         </div>          
         <hr />
-        <div>
-            <ul>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
-                <li><a href="{% url 'rango:logout' %}">Logout</a></li>
-                <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
-            {% else %}
-                <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
-                <li><a href="{% url 'rango:login' %}">Login</a></li>
-            {% endif %}
-                <li><a href="{% url 'rango:about' %}">About</a></li>
-                <li><a href="{% url 'rango:index' %}">Index</a></li>
-            </ul>
-        </div>
+        <footer id="footer">
+            <a class="footer-link" href="https://twitter.com/"><i class="fab fa-twitter icon"></i></a>
+            <a class="footer-link" href="https://facebook.com/"><i class="fab fa-facebook-f icon"></i></a>
+            <a class="footer-link" href="https://instagram.com/"><i class="fab fa-instagram icon"></i></a>
+            <a class="footer-link" href="mailto:rango@rango.com"><i class="fas fa-envelope icon"></i></a>
+        
+            <p>© Copyright 2021 Rango</p>
+        
+          </footer>
     </body>
 
 </html>
