--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-{% load staticfiles %} 
+{% load static %} 
 {% load rango_template_tags %}
 <html>
     <head lang="en">
         <meta charset="UTF-8">
         {% block css_block %}
             <link rel="stylesheet" href="{% static 'css/base.css' %}">
+            <link rel="stylesheet" href="{% static 'css/index.css' %}">
         {% endblock %}
         <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
         <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
         <script src="https://kit.fontawesome.com/9095c6b559.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+        <script src="{% static 'jquery/jquery-3.6.0.js' %}"></script>
+
         <title>
             Rango - 
             {% block title_block %}
@@ -80,6 +83,12 @@
             <a class="footer-link" href="mailto:rango@rango.com"><i class="fas fa-envelope icon"></i></a>
         
             <p>© Copyright 2021 Rango</p>
+    <!-- Bootstrap core JavaScript -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+        <script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js"></script>
         
           </footer>
     </body>
