--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,6 +1,7 @@
 {% extends 'rango/base.html' %}
 {% load static %}
 {% load rango_template_tags %}
+<script src="{% static 'jquery/jquery-3.6.0.js' %}"></script>
 {% block title_block %}
     {% if category %}
         {{ category.name }}
