--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-3 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home"></i> Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'rango:index' %}"><i class="fas fa-home"></i> Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -65,7 +65,7 @@
             </li>
           </ul>
           <form class="d-flex">
-            <input class="search me-2" type="search" placeholder="Search categories, pages" aria-label="Search">
+            <input class="search me-2" tyse="search" placeholder="Search categories, pages" aria-label="Search">
             <button class="btn btn-dark" type="submit">Search</button>
           </form>
           {% if user.is_authenticated %}
