--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -6,8 +6,9 @@
 <head lang="en">
   <meta charset="UTF-8">
   {% block css_block %}
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    your css path
   {% endblock %}
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   <script src="https://kit.fontawesome.com/9095c6b559.js" crossorigin="anonymous"></script>
