--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -4,18 +4,18 @@
 {% block title_block %}
     Homepage
 {% endblock %}
-
+{% block css_block %}
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+{% endblock %}
 {% block body_block %}
-<h1>Rango says...</h1>
-<div>
-    {% if user.is_authenticated %}
-        howdy {{ user.username }}!
-    {% else %}
-        hey there partner!
-    {% endif %}
-<br />
+<!-- title part -->
+<div class = "title">
+    <img class="rango" src="{% static 'images/title-image.png' %}" alt="rango">
 </div>
+<!-- category button -->
+<div class = "category">
 
+</div>
 <div>
     <h2>Most Liked Categories</h2>
 {% if categories %}
@@ -42,7 +42,7 @@
 {% endif %}
 </div>
 
-<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+
 {% endblock %}
 
  
