--- a/static/css/index.css
+++ b/static/css/index.css
@@ -16,7 +16,7 @@
     z-index: 1;
 }
 .button{
-    margin:2% 4% 2% 4%;
+    margin:3% 4% 2% 4%;
     width:150px;
     font-family: 'Montserrat';
 }
@@ -28,4 +28,14 @@
 h4{
     font-family: 'Montserrat';
     padding:3% 0 0 1%;
+}
+.testimonials-image{
+    width: 70%;
+    margin: 20px;
+}
+.carousel-item{
+    padding:5% 15%;
+}
+#testimonials{
+    text-align: center;
 }
