--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -6,7 +6,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   {% block css_block %}
-    your css path
+  your css path
   {% endblock %}
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
@@ -39,12 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-3 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'rango:index' %}"><i class="fas fa-home"></i> Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'rango:index' %}"><i class="fas fa-home"></i>
+                Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                 Category
+                Category
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 {% if categories %}
@@ -69,10 +70,15 @@
               </ul>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="search me-2" tyse="search" placeholder="Search categories, pages" aria-label="Search">
+
+          <form class="d-flex" id="user-form" method="post" type="search" action="{% url 'rango:search' %}">
+            {% csrf_token %}
+            <div class="form-group">
+              <input class="search me-2" type="text" name="query" id="query" placeholder="Search categories, pages" aria-label="Search" value="{{ query }}" />
+            </div>
             <button class="btn btn-dark" type="submit">Search</button>
           </form>
+
           {% if user.is_authenticated %}
           <ul class="navbar-nav me-auto mb-3 mb-lg-0">
             <li class="nav-item">
@@ -115,8 +121,11 @@
     <p>© Copyright 2021 Rango</p>
 
   </footer>
-    <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
-    <script src="https://cdn.staticfile.org/jquery/3.0.0/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+  <script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.staticfile.org/jquery/3.0.0/jquery.min.js"></script>
 </body>
 
 </html>
