optimized category dropdown menu on navbar

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -67,6 +67,8 @@
                 {% else %}
                 <li class="nav-item">NONE</li>
                 {% endif %}
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/rango/category/">See All</a>
               </ul>
             </li>
           </ul>
