--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -58,19 +58,20 @@
     </div>
 
   </section>
-
+<!-- most viewed pages -->
 <div>
     <h4>Most Viewed Pages</h4>
     <hr>
-{% if pages %}
-    <ul>
+    {% if pages %}
+    <ul class="most_viewed list-group list-group-flush">
     {% for page in pages %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
     {% endfor %}
     </ul>
-{% else %}
+    {% else %}
     <strong>There are no pages present.</strong>
-{% endif %}
+    {% endif %}
+
 </div>
 
 
