--- a/templates/rango/search.html
+++ b/templates/rango/search.html
@@ -4,23 +4,23 @@
 {% block title_block %}
     Search
 {% endblock %}
-
+{% block css_block %}
+    <link rel="stylesheet" href="{% static 'css/search.css' %}">
+{% endblock %}
 {% block body_block %}
-<div class="jumbotron p-4">
-    <div class="container">
-        <h1 class="jumbotron-heading">Search with Rango</h1>
-    </div>
+<div class="heading">
+    <h1 class="search-heading">Search with Rango</h1>   
 </div>
 <div>
     {% if result_list %}
     <h2>Results</h2>
 
-    <div class="list-group">
+    <div class="list list-group">
     {% for result in result_list %}
         <div class="list-group-item">
-            <h3 class="list-group-item-heading">
+            <h5 class="list-group-item-heading">
                 <a href="{{ result.link }}">{{ result.title|safe|escape }}</a>
-            </h3>
+            </h5>
             <p class="list-group-item-text">
                 {{ result.summary|safe|escape }}
             </p>
