fix the footer on the bottom to adapt the different page

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -108,13 +108,14 @@
     </nav>
   </section>
 
-  <div>
+  <div class = "content">
     {% block body_block %}
     This is body_block's default content.
     {% endblock %}
   </div>
 
   <footer id="footer">
+    
     <a class="footer-link" href="https://twitter.com/"><i class="fab fa-twitter icon"></i></a>
     <a class="footer-link" href="https://facebook.com/"><i class="fab fa-facebook-f icon"></i></a>
     <a class="footer-link" href="https://instagram.com/"><i class="fab fa-instagram icon"></i></a>
