--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,12 @@
+html {
+    height: 100%;
+}
 body{
     font-family: 'Montserrat', sans-serif;
+    height:100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .navbar-brand{
     font-family: "Ubuntu";
@@ -25,14 +32,18 @@ body{
         outline:0;
         background:#fff;
 }
+.content{
+    flex: 1;
+}
 #footer{
     background-color:#fff;
     font-family: 'Montserrat';
     padding:7% 25%;
     text-align: center;
-  }
+}
 .icon{
     padding:5% 0.5% 2%;
 }
+
 
 
