revise footer padding

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,7 +38,7 @@ body{
 #footer{
     background-color:#fff;
     font-family: 'Montserrat';
-    padding:7% 25%;
+    padding:7% 25% 2%;
     text-align: center;
 }
 .icon{
