fill in data to population_script

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -20,7 +20,7 @@
     <a href="/rango/category/perl"><button type="button" class="button btn btn-outline-dark btn-lg">Perl</button></a></br>
     <a href="/rango/category/java"><button type="button" class="button btn btn-outline-dark btn-lg">Java</button></a>
     <a href="/rango/category/javascript"><button type="button" class="button btn btn-outline-dark btn-lg">JavaScript</button></a>
-    <a href="/rango/category/prolong"><button type="button" class="button btn btn-outline-dark btn-lg">Prolong</button></a>
+    <a href="/rango/category/prolong"><button type="button" class="button btn btn-outline-dark btn-lg">Prolog</button></a>
     <a href="/rango/category/php"><button type="button" class="button btn btn-outline-dark btn-lg">PHP</button></a></br>
     <a class ="more" href="/rango/category/">see more >> </a>
     
