--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -41,7 +41,7 @@
                     {% if user.is_authenticated %}
                         <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"> <i class="fas fa-user-circle"></i> Profile</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'rango:profile' user.username %}"> <i class="fas fa-user-circle"></i> Profile</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="{% url 'rango:logout' %}"> <i class="fas fa-sign-out-alt"></i></i> Log out</a>
