--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -7,14 +7,15 @@
   {% block css_block %}
   your css path
   {% endblock %}
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   <script src="https://kit.fontawesome.com/9095c6b559.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <script src="{% static 'jquery/jquery-3.6.0.js' %}"></script>
-
   <script src="{% static 'jquery/rango-ajax.js' %}"></script>
+  <script src="{% static 'jquery/category.js' %}"></script>
+  <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 
   <title>
     Rango -
