--- a/templates/rango/pagescore.html
+++ b/templates/rango/pagescore.html
@@ -70,7 +70,8 @@ div.ex
             average score:  <strong id="score_count"> {{page.ave}}</strong>
             </li></div>  
             <div class="ex">
-              <div id="starRating">
+              <div id="score">
+              <div id="starRating" >
           <p style=" margin:3% 40% 11%;"><b style=" font-size: 180%">Rating</b></p>
           <p class="photo">
              <span><i class="high"></i><i class="nohigh"></i></span>
@@ -81,9 +82,10 @@ div.ex
           </p>
           <div class="bottoms" data-catid="{{page.id}}">
              <button class="blackBtn sureStar " id="score" data-catid="{{page.id}}" type="button"style=" font-size: 4%;margin:8% 39% 5%">OK</button>
-             <p id="finish" style=" margin:6% 25% 11%;"><b style=" font-size: 100%"> Thank you for your score </b></p>
          </div>
         </div>
+      </div>
+      <p id="finish" style=" margin:6% 25% 11%;"><b style=" font-size: 100%"> Thank you for your score </b></p>
     </div>
 </div>
 </div>
