--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -65,7 +65,7 @@
     {% if pages %}
     <ul class="most_viewed list-group list-group-flush">
     {% for page in pages %}
-        <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+        <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a>    <i class="icon fas fa-star">  {{ page.ave}}</i></li>
     {% endfor %}
     </ul>
     {% else %}
