--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -76,7 +76,7 @@
             <div class="panel-heading">
               <h4 class="panel-title">
                   <div style="margin:50px 10px 0px;font-size: 20px;"><li><a href="{{ page.url }}">{{ page.title }}</a></li><hr />
-                    average score:  <strong id="score_count"> {{page.ave}}</strong>
+                    <strong id="num_count"> {{page.num}}</strong> people gave average score:  <strong id="score_count"> {{page.ave}}</strong>
                     </li></div>               
                 <a style="margin:50px 10px 50px;font-size: 15px;" 
                    href="/rango/category/{{ category.slug }}/{{ page.slug }}/pagescore" >
