--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -17,17 +17,16 @@ h1.welcome{
   top-content {
     position: relative;
   }
-  /*头像  */
+
   .user-info {
     position: relative;
-    /* align-items: center; */
     left: 550px;
     margin-top:100px;
 	margin-right:50px;
 	margin-left:50px;
   }
   
-  /* 裁剪图片 */
+
   .userinfo-avatar {
     width: 50rpx;
     height: 50rpx;
@@ -37,7 +36,7 @@ h1.welcome{
       margin-bottom: 150px;
       margin-left: 550px;
       margin-right: 700px;
-      padding-bottom:100px;
+      padding-bottom:130px;
       
 
   }
@@ -70,5 +69,20 @@ h1.welcome{
 .col-lg-2{
   background: rgb(0, 0, 0); 
   position:absolute; 
-  height:64.5%;
+  height:66%;
+}
+.favoritetitle{
+  font-family: Lucida Console;
+  color:rgb(0, 0, 0)
+}
+.boxinfavorite{
+  margin-bottom: 150px;
+  margin-left: 550px;
+  margin-right: 700px;
+  padding-bottom:80px;
+}
+.favoritecontent{
+  color:white;
+  font-size:large;
+  font-family: Lucida Console;
 }
