edit some content

--- a/templates/rango/pagescore.html
+++ b/templates/rango/pagescore.html
@@ -67,7 +67,7 @@ div.ex
         </div>
       <div class="column middle">
         <div style="margin:50px 10px 0px;font-size: 20px;"><li><a href="{{ page.url }}">{{ page.title }}</a></li><hr />
-          <strong id="num_count"> {{page.num}}</strong> people gave average score:  <strong id="score_count"> {{page.ave}}</strong>
+          <strong id="num_count"> {{page.num}}</strong> people rated average score:  <strong id="score_count"> {{page.ave}}</strong>
             </li></div>  
             <div class="ex">
               <div id="score">
