--- a/templates/rango/profile.html
+++ b/templates/rango/profile.html
@@ -1,6 +1,6 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
-
+{% csrf_token %}
 {% block title_block %}
     Profile for {{ selected_user.username }}
 {% endblock %}
